grammar.js
    source_file: ($) =>
      repeat(
        choice(
          $.pbexport_header,
          $.forward_block,
          $.type_declaration,
          $.type_variables_block,
          $.shared_variables_block,
          $.global_variables_block,
          $.forward_prototypes_block,
          $.function_definition,
          $.subroutine_definition,
          $.event_definition,
          $.on_block,
          $._statement,
        ),
      ),

    // $PBExportHeader$foo.sru  /  $PBExportComments$...
    identifier: (_) =>
      token(/[a-zA-Z_][a-zA-Z0-9_\-\$#%]{0,39}/),

    /* ---- Literals ---- */
    number: (_) => /\d+(\.\d+)?/,
    boolean: (_) => choice("true", "false"),
    _type: ($) => choice($.primitive_type, $.user_type),
    primitive_type: (_) =>
      choice(
        "any",
        "blob",
        "boolean",
        "byte",
        "char",
        "character",
        "date",
        "datetime",
        "decimal",
        "dec",
        "double",
        "integer",
        "int",
        "longlong",
        "long",
        "longptr",
        "real",
        "string",
        "time",
        "unsignedinteger",
        "unsignedint",
        "uint",
        "unsignedlong",
        "ulong",
      ),

    /* ---- Access Modifiers ---- */
    access_modifier: (_) =>
      choice(
        "public",
        "private",
        "protected",
        "protectedread",
        "protectedwrite",
        "privateread",
        "privatewrite",
        "systemread",
        "systemwrite",
      ),

    /* ---- Expressions ---- */
    _expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.not_expression,
        $.call_expression,
        $.member_expression,
        $.index_expression,
        $.super_call_expression,
        $.enum_constant,
        $.this_expression,
        $.identifier,
        $.number,
        $.string,
        $.boolean,
        $.null,
        $.parenthesized_expression,
        $.array_literal,
        $.assignment_expression,
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ["+", 10],
          ["-", 10],
          ["*", 20],
          ["/", 20],
          ["<", 5],
          [">", 5],
          ["<=", 5],
          [">=", 5],
          ["<>", 5],
          ["=", 5],
          ["and", 3],
          ["or", 1],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field("operator", operator),
              field("right", $._expression),
            ),
          ),
        ),
      ),

    not_expression: ($) =>
      prec.right(4, seq("not", field("operand", $._expression))),

    member_expression: ($) =>
      prec.left(
        18,
        seq(
          field("object", $._expression),
          ".",
          field("property", $.identifier),
        ),
      ),

    index_expression: ($) =>
      prec.left(
        20,
        seq(
          field("object", $._expression),
          "[",
          field("index", $._expression),
          "]",
        ),
      ),

    enum_constant: (_) =>
      token(/[a-zA-Z_][a-zA-Z0-9_\-\$#%]{0,39}!/),

    // this / super / parent as expressions
    this_expression: (_) => choice("this", "super", "parent"),

    _statement: ($) =>
      seq(
        choice(
          $.label_statement,
          $.goto_statement,
          $.expression_statement,
          $.variable_declaration,
          $.if_statement,
          $.for_statement,
          $.loop_statement,
          $.return_statement,
          $.continue_statement,
          $.exit_statement,
          $.try_statement,
          $.throw_statement,
          $.create_statement,
          $.destroy_statement,
          $.halt_statement,
          $.choose_statement,
          $.call_statement,
        ),
        choice("\n", ";"),
      ),

    expression_statement: ($) => $._expression,

    variable_declaration: ($) =>
      seq(
        optional($.access_modifier),
        optional("constant"),
        $._type,
        $.variable_declarator,
        repeat(seq(",", $.variable_declarator)),
      ),

    return_statement: ($) => prec.right(seq("return", optional($._expression))),
    continue_statement: (_) => "continue",
    exit_statement: (_) => "exit",
    variable_declarator: ($) =>
      seq(
        field("name", $.identifier),
        optional($.array_dimensions),
        optional(seq("=", field("value", $._expression))),
      ),

    forward_block: ($) =>
      seq(
        "forward",
        repeat($.forward_type_declaration),
        "end",
        "forward",
      ),

    // Type declaration inside a forward block (can omit global/local)
    forward_type_declaration: ($) =>
      seq(
        optional(choice("global", "local")),
        "type",
        field("name", $.identifier),
        "from",
        field("ancestor", $._type_ref),
        optional(seq("within", field("parent", $.identifier))),
        optional("autoinstantiate"),
        repeat($.type_member),
        "end",
        "type",
      ),

    // global type Name from Ancestor ... end type
    type_declaration: ($) =>
      seq(
        choice("global", "local"),
        "type",
        field("name", $.identifier),
        "from",
        field("ancestor", $._type_ref),
        optional(seq("within", field("parent", $.identifier))),
        optional("autoinstantiate"),
        repeat($.type_member),
        "end",
        "type",
      ),

    _type_ref: ($) => choice($.primitive_type, $.identifier),

    // A member inside a type block: variable, function prototype, or event prototype
    type_member: ($) =>
      choice(
        $.type_variable_member,
        $.type_function_member,
        $.type_event_member,
      ),

    type_variable_member: ($) =>
      seq(
        optional($.access_modifier),
        optional("constant"),
        $._type,
        $.variable_declarator,
        repeat(seq(",", $.variable_declarator)),
        choice("\n", ";"),
      ),

    type_variables_block: ($) =>
      seq("type", "variables", repeat($._statement), "end", "variables"),

    // shared variables ... end variables
    shared_variables_block: ($) =>
      seq("shared", "variables", repeat($._statement), "end", "variables"),

    // global variables ... end variables
    function_definition: ($) =>
      seq(
        optional($.access_modifier),
        "function",
        field("return_type", $._type),
        field("name", $.identifier),
        "(",
        optional($.parameter_list),
        ")",
        optional(seq("throws", $.identifier)),
        repeat($._statement),
        "end",
        "function",
      ),

    // public subroutine Name(params) ... end subroutine
    subroutine_definition: ($) =>
      seq(
        optional($.access_modifier),
        "subroutine",
        field("name", $.identifier),
        "(",
        optional($.parameter_list),
        ")",
        optional(seq("throws", $.identifier)),
        repeat($._statement),
        "end",
        "subroutine",
      ),

    // event Name ... end event
    // PB allows semicolon after event header: "event pfc_postopen;"
    event_definition: ($) =>
      seq(
        optional($.access_modifier),
        "event",
        field("name", $.identifier),
        optional(seq("(", optional($.parameter_list), ")")),
        optional(";"),
        repeat($._statement),
        "end",
        "event",
      ),

    // on TypeName.EventName ... end on
    parameter_list: ($) =>
      seq($.parameter, repeat(seq(",", $.parameter))),

    parameter: ($) =>
      seq(
        optional("readonly"),
        optional("ref"),
        $._type,
        field("name", $.identifier),
        optional($.array_dimensions),
      ),
